--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf kdist && tsc",
+    "dev": "node -r ts-node/register --inspect=0.0.0.0 src/index.ts",
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "fastify": "3.25.0",
     "typescript": "4.5.4"
   },
   "devDependencies": {
     "@tsconfig/node14": "1.0.1",
     "@types/node": "17.0.0",
-    "rimraf": "3.0.2"
+    "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@typescript-eslint/parser": "5.7.0",
+    "eslint": "8.4.1",
+    "rimraf": "3.0.2",
+    "ts-node": "10.4.0"
   }
 }
