--- a/package.json
+++ b/package.json
@@ -6,19 +6,30 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf kdist && tsc",
+    "db:console": "docker-compose exec postgres psql -h localhost -U postgres -d webapp_dev",
+    "db:migrate": "knex migrate:latest",
+    "docker:db:migrate": "docker-compose run web yarn db:migrate",
+    "docker:db:migrate:undo": "docker-compose run web npx knex migrate:down",
+    "rebuild:web": "docker-compose rm -fs web && docker-compose build web && docker-compose up -d",
     "dev": "node -r ts-node/register --inspect=0.0.0.0 src/index.ts",
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@prisma/client": "3.6.0",
     "fastify": "3.25.0",
+    "knex": "0.95.14",
+    "nanoid": "3.1.30",
+    "pg": "8.7.1",
     "typescript": "4.5.4"
   },
   "devDependencies": {
     "@tsconfig/node14": "1.0.1",
+    "@types/nanoid": "3.0.0",
     "@types/node": "17.0.0",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
     "eslint": "8.4.1",
+    "prisma": "3.6.0",
     "rimraf": "3.0.2",
     "ts-node": "10.4.0"
   }
